--- a/outils/style.css
+++ b/outils/style.css
@@ -1,14 +1,119 @@
-header{
-    background: #F58549; /* Mango Tango */
+html{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    background: white;
 }
 
-body{
-    background: #FAF0CA; /* Lemon Meringue */
+header{
+    margin: 0 auto;
+    text-align: center;
+    color: #F58549; /* Mango Tango */
+    /*background: #FAF0CA; /* Lemon Meringue */
+    justify-content: center;
+    align-items: center;
+}
+
+header #top{
+    border-bottom: solid #F58549;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header #top_left{
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+}
+
+header #top_center{
+    /*display: inline-block;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+}
+
+header #top_right{
+    display: inline-block;
+    text-align: center;
+    vertical-align: top;
+    width: 30%;
+}
+
+header #top_right button{
+    background: #F58549;
+    color: white;
+    border: solid #F58549;
+    border-radius: 10px;
+    height: 30px;
+    width: 150px;
+}
+
+header #top_right button:hover{
+    background: white;
+    color: #F58549;
+    border: solid #F58549;
+    border-radius: 10px;
+}
+
+header nav{
+    height: 30px;
+    padding-top: 10px;
+    text-align: center;
+    vertical-align: top;
+    background: rgb(240, 240, 240);
+}
+
+header a{
+    color: #F58549; 
+}
+
+header nav a{
+    color: black;
+}
+
+div #body{
+    /*background: #FAF0CA; /* Lemon Meringue */
+    padding : 10px;
+    width: 100% auto;;
+}
+
+div #random_recipe{
+    border: 2px solid #F58549;
+    width: 80%;
+    border-radius: 10px;
+    margin-top : 1%;
+    margin-left : 10%;
+    margin-right : 10%;
+    align-content: center;
+    align-items: center;
+    display: inline-block;
+}
+
+.random_recipe{
+    background: #FAF0CA;
+    align-items: center;
+    display: inline-block;
+    border: 2px solid #F58549;
+    width: 30% ;
+    border-radius: 10px;
+    margin : 10px;
+    padding: 4px;
+    height : 400px;
+    font-size: 15px;
+    /*text-align: bottom;*/
+}
+
+.random_recipe #recipe_title{
+    
+}
+
+a{
+    text-decoration : none;
 }
 
 footer{
-    background: #141204; /* Black Chocolate */
-    color : white;
+    background: rgb(240, 240, 240); /* Black Chocolate */
 }
 
 #body_connexion{
@@ -42,7 +147,7 @@ input[type=text], input[type=password] {
 }
 
 input[type=submit] {
-    background-color: #3E8914; /* India Green */
+    background-color: #F58549;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
