--- a/css/login.css
+++ b/css/login.css
@@ -1,14 +1,11 @@
-@import url(
-"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: "Poppins", sans-serif;
 }
 
-body {
+#body {
+	margin: 10px;
 	height: 100vh;
 	width: 100vw;
 	display: flex;
@@ -16,27 +13,6 @@ body {
 	align-items: center;
 	flex-direction: column;
 	gap: 30px;
-	background-color: rgb(231, 231, 231);
-}
-
-header {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-    color: #F58549; /* Mango Tango */
-    /*background: #FAF0CA; /* Lemon Meringue */
-	align-items: center;
-	justify-content: center;
-	gap: 8px;
-}
-
-.heading {
-    color: #F58549; /* Mango Tango */
-}
-
-.title {
-	font-weight: 400;
-	letter-spacing: 1.5px;
 }
 
 .container {
