--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,12 @@ a{
     text-decoration : none;
 }
 
+hr{
+    height: 3px;
+    background-color: #F58549;
+    border: none;
+}
+
 footer{
     background: rgb(240, 240, 240);
 }
