--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,9 @@
 * {
 	margin: 0;
 	padding: 0;
+    text-decoration: none;
 	box-sizing: border-box;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-}
-
-header{
-    text-align: center;
-    color: #F58549;
-    justify-content: center;
-    align-items: center;
-}
-
-header #top{
-    border-bottom: solid #F58549;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-header #top_left{
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-}
-
-header #top_center{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40%;
-}
-
-header #top_right{
-    display: inline-block;
-    text-align: center;
-    vertical-align: top;
-    width: 30%;
-}
-
-header #top_right button{
-    background: #F58549;
-    color: white;
-    border: solid #F58549;
-    border-radius: 10px;
-    height: 30px;
-    width: 150px;
-}
-
-header #top_right button:hover{
-    background: white;
-    color: #F58549;
-    border: solid #F58549;
-    border-radius: 10px;
-}
-
-header nav{
-    height: 30px;
-    padding-top: 10px;
-    text-align: center;
-    vertical-align: top;
-    background: rgb(240, 240, 240);
-}
-
-header a{
-    color: #F58549; 
-}
-
-header nav a{
-    color: black;
 }
 
 div #body{
