--- a/css/header.css
+++ b/css/header.css
@@ -105,7 +105,7 @@ header nav a{
 
 .navbar .nav-container a {
   text-decoration: none;
-  color: #0e2431;
+  color:#F58549; 
   font-weight: 500;
   font-size: 1.2rem;
   padding: 0.7rem;
