--- a/css/header.css
+++ b/css/header.css
@@ -3,10 +3,6 @@ header{
     color: #F58549;
     justify-content: center;
     align-items: center;
-    
-    /*height : 500px;
-    border: 5px solid darkblue;
-    height: 150px;*/
     width: 100%;
     height:100px;
 }
@@ -29,8 +25,61 @@ header #top_left{
 header #top_center{
     display: flex;
     justify-content: center;
+    border-radius: 4px;
     align-items: center;
     width: 70%;
+}
+header #marque{
+  margin: 30px;
+}
+svg{
+  fill:#F58549;
+  background-color: white;
+}
+.autocomplete {
+  /*the container must be positioned relative:*/
+  position: relative;
+  display: inline-block;
+}
+input {
+  border: 1px solid transparent;
+  background-color: #f1f1f1;
+  padding: 10px;
+  font-size: 16px;
+}
+input[type=text] {
+  background-color: #f1f1f1;
+  width: 100%;
+}
+input[type=submit] {
+  background-color: DodgerBlue;
+  color: #fff;
+}
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
+}
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
+}
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: DodgerBlue !important;
+  color: #ffffff;
 }
 
 header #top_right{
